--- a/view/view_conf_ubicaciones.xml
+++ b/view/view_conf_ubicaciones.xml
@@ -5,14 +5,14 @@
         <field name="name">conf.pmant.ubicacion.tree</field>
         <field name="model">conf.pmant.ubicacion</field>
         <field name="arch" type="xml">
-            <tree>
+            <list>
                 <field name="name"/>
                 <field name="property_stock_inventory"/>
                 <field name="property_stock_customer"/>
                 <field name="operacion_entrada"/>
                 <field name="operacion_salida"/>
                 <field name="predeterminado"/>
-            </tree>
+            </list>
         </field>
     </record>
 
@@ -37,7 +37,7 @@
         <record id="action_conf_pmant_ubicacion" model="ir.actions.act_window">
         <field name="name">Ubicaciones de Mantenimiento</field>
         <field name="res_model">conf.pmant.ubicacion</field>
-        <field name="view_mode">tree,form</field>
+        <field name="view_mode">list,form</field>
         <field name="help" type="html">
             <p class="o_view_nocontent_smiling_face">
                 Crea las ubicaciones de mantenimiento aquí.
