--- a/view/inhrit_form_tarea_mantenimiento.xml
+++ b/view/inhrit_form_tarea_mantenimiento.xml
@@ -15,7 +15,8 @@
                 <button string="Confirmar recepcion" invisible="not is_evaluacion or is_confirm_recepcion" name="action_confirm_recepcion" icon="fa-truck" type="object" class="oe_highlight"/>
                 <button string="Cancelar" invisible="not is_evaluacion or not is_confirm_recepcion or state_recepcion not in ['confirm_recepcion', 'entregado', 'recepcionado']" name="cancel_confirm"  type="object" />
                 <button string="Establecer borrador" invisible="not is_evaluacion or state_recepcion != 'cancelado'" name="restart_confirm"  type="object" />
-
+                <button string="Solicitar repuestos"  name="action_solicitar_repuestos" type="object"/>
+ 
             </xpath>
             <xpath expr="//div[@name='button_box']" position="after">
                 <div class="badge rounded-pill text-bg-warning float-end fs-6 border-0" invisible="is_evaluacion == False and is_confirm_recepcion == False or state_recepcion != 'recepcionado'">Recepcionado</div>
@@ -26,6 +27,18 @@
                     <button invisible="not is_evaluacion and not is_confirm_recepcion" name="action_view_entregas" type="object" class="oe_stat_button" icon="fa-truck">
                         <field name="len_movimientos" string="Recepcion" widget="statinfo"/>
                     </button>
+                    
+            </xpath>
+            <xpath expr="//page[@name='detalle_venta']" position="after">
+                <page name="req_repuestos" string="Requerimientos de repuestos">
+                    <field name="requerimientos_ids">
+                        <list editable="bottom">
+                            <field name="product_id"/>
+                            <field name="nota"/>
+                            <field name="cantidad"/>
+                        </list>
+                    </field>
+                </page>
             </xpath>
         </field>
     </record>
@@ -41,7 +54,7 @@
                 <field name="state_recepcion"></field>
                 <field name="is_evaluacion"></field>
             </xpath>
-            <xpath expr="//span[@name='tipo']" position="after">
+            <xpath expr="//footer" position="after">
                 <t t-if="record.is_evaluacion.raw_value">
 
                     <t t-if="record.state_recepcion.raw_value == 'recepcionado'">
@@ -61,18 +74,7 @@
                     </t>
                 </t>
             </xpath>
-            <xpath expr="//page[@name='detalle_venta']" position="after">
-                <page name="req_repuestos" string="Requerimientos de repuestos">
-                    <field name="requerimientos_ids">
-                        <list >
-                            <field name="product_id"/>
-                            <field name="nota"/>
-                            <field name="cantidad"/>
-                            <field name="unidad_medida"/>
-                        </list>
-                    </field>
-                </page>
-            </xpath>
+            
         </field>
     </record>
 
