Agregamos los requerimientos de repuestos

--- a/view/inherit_stock_picking.xml
+++ b/view/inherit_stock_picking.xml
@@ -14,7 +14,22 @@
                     <field name="len_tarea" invisible="1"></field>
             </xpath>
             <xpath expr="//field[@name='sale_id']" position="after">
-                <field name="len_tarea" readonly="1"/>
+                <field name="len_tarea" invisible="1"/>
+                <field name="is_requerimiento" invisible="1"/>
+                <field name="is_devolucion_repuesto" invisible="1"/>
+            </xpath>
+        </field>
+    </record>
+
+
+    <record id="stock_scrap_view_form" model="ir.ui.view">
+        <field name="name">stock.scrap.view.form.inherit</field>
+        <field name="model">stock.scrap</field>
+        <field name="inherit_id" ref="stock.stock_scrap_form_view"/>
+        <field name="arch" type="xml">
+            <xpath expr="//field[@name='company_id']" position="after">
+                <field name="tarea_id" invisible="1"/>
+                
             </xpath>
         </field>
     </record>
