--- a/view/inhrit_form_tarea_mantenimiento.xml
+++ b/view/inhrit_form_tarea_mantenimiento.xml
@@ -11,12 +11,21 @@
             <xpath expr="//button[@name='create_ot']" position="after">
                 <!-- <field name="grupo_id" invisible="1"/> -->
                 <field name="state_recepcion" invisible="1"/>
+                <field name="is_confirm_repuestos" invisible="1"></field>
                 <field name="is_confirm_recepcion" invisible="1"/>
+                <field name="is_solicitado"  invisible="1"/>
+                <field name="is_tecnico"  invisible="1"/>
+                <field name="vissible_devolucion"  invisible="1"/>
+                <field name="vissible_desecho"  invisible="1"/>
+                <field name="confirm_devolucion"  invisible="1"/>
+                <field name="confirm_desecho"  invisible="1"/>
                 <button string="Confirmar recepcion" invisible="not is_evaluacion or is_confirm_recepcion" name="action_confirm_recepcion" icon="fa-truck" type="object" class="oe_highlight"/>
                 <button string="Cancelar" invisible="not is_evaluacion or not is_confirm_recepcion or state_recepcion not in ['confirm_recepcion', 'entregado', 'recepcionado']" name="cancel_confirm"  type="object" />
                 <button string="Establecer borrador" invisible="not is_evaluacion or state_recepcion != 'cancelado'" name="restart_confirm"  type="object" />
-                <button string="Solicitar repuestos"  name="action_solicitar_repuestos" type="object"/>
- 
+                <button string="Solicitar repuestos" groups="pmant.group_pmant_planner,pmant.group_pmant_admin,pmant.group_pmant_tecnico" invisible="is_solicitado"  name="action_solicitar_repuestos" type="object"/>
+                <button string="Confirmar repuestos" invisible="is_confirm_repuestos" groups="pmant.group_pmant_planner,pmant.group_pmant_admin" name="action_create_mov" type="object"/>
+                <button string="Confirmar consumo de repuestos" invisible="not confirm_desecho" groups="pmant.group_pmant_planner,pmant.group_pmant_admin" name="action_consumir_repuestos" type="object"/>
+                <button string="Devolver repuestos" invisible="not confirm_devolucion" groups="pmant.group_pmant_planner,pmant.group_pmant_admin" name="action_devolucion_repuesto" type="object"/>
             </xpath>
             <xpath expr="//div[@name='button_box']" position="after">
                 <div class="badge rounded-pill text-bg-warning float-end fs-6 border-0" invisible="is_evaluacion == False and is_confirm_recepcion == False or state_recepcion != 'recepcionado'">Recepcionado</div>
@@ -24,18 +33,28 @@
                 <div class="badge rounded-pill text-bg-danger float-end fs-6 border-0" invisible="is_evaluacion == False and is_confirm_recepcion == False or state_recepcion != 'confirm_recepcion'">Sin recepcionar</div>
             </xpath>
             <xpath expr="//div[@name='button_box']" position="inside">
-                    <button invisible="not is_evaluacion and not is_confirm_recepcion" name="action_view_entregas" type="object" class="oe_stat_button" icon="fa-truck">
-                        <field name="len_movimientos" string="Recepcion" widget="statinfo"/>
-                    </button>
-                    
+                <button invisible="not vissible_devolucion" name="action_view_devoluciones" type="object" class="oe_stat_button" icon="fa-rotate-right">
+                    <field name="len_mov_devoluciones" string="Devolucion de repuestos" widget="statinfo"/>
+                </button>
+                <button invisible="not vissible_desecho" name="action_view_desecho_repuestos" type="object" class="oe_stat_button" icon="fa-trash">
+                    <field name="len_mov_desechos" string="Desechos" widget="statinfo"/>
+                </button>
+                <button invisible="not is_confirm_repuestos" name="action_view_repuestos" type="object" class="oe_stat_button" icon="fa-truck">
+                    <field name="len_req_repuestos" string="Repuestos" widget="statinfo"/>
+                </button>
+                <button invisible="not is_evaluacion and not is_confirm_recepcion" name="action_view_entregas" type="object" class="oe_stat_button" icon="fa-truck">
+                    <field name="len_movimientos" string="Recepcion" widget="statinfo"/>
+                </button> 
             </xpath>
             <xpath expr="//page[@name='detalle_venta']" position="after">
                 <page name="req_repuestos" string="Requerimientos de repuestos">
-                    <field name="requerimientos_ids">
+                    <field name="requerimientos_ids" readonly="is_solicitado and is_tecnico" >
                         <list editable="bottom">
-                            <field name="product_id"/>
-                            <field name="nota"/>
-                            <field name="cantidad"/>
+                            <field name="product_id" width="20%"/>
+                            <field name="nota" width="30%"/>
+                            <field name="cantidad" width="20%"/>
+                            <field name="cant_consumido" column_invisible="not parent.is_confirm_repuestos" invisible="not parent.is_confirm_repuestos" width="20%"/>
+                            <button name="action_wizard_repuesto_consumido" width="10%" string="Consumir" type="object" column_invisible="not parent.is_confirm_repuestos" invisible="not parent.is_confirm_repuestos" />
                         </list>
                     </field>
                 </page>
